--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "mysql-es"
-version = "0.2.6"
+version = "0.3.0"
 authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
 edition = "2021"
-license = "MIT"
+license = "Apache-2.0"
 keywords = ["cqrs", "event-sourcing", "serverless"]
-description = "A MySql implementation of an event store for cqrs-es."
+description = "A MySql implementation of an event repository for cqrs-es."
 repository = "https://github.com/serverlesstechnology/mysql-es"
 documentation = "https://docs.rs/mysql-es"
 readme = "README.md"
 
 [dependencies]
-cqrs-es = "0.2.6"
+cqrs-es = "0.3.0"
 
 async-trait = "0.1.52"
-futures = "0.3.19"
+futures = "0.3.21"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-sqlx = { version = "0.5.10", features = [ "mysql" , "runtime-tokio-rustls", "json"] }
+sqlx = { version = "0.5.11", features = [ "mysql" , "runtime-tokio-rustls", "json"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt"] }
