--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ async-trait = "0.1.53"
 futures = "0.3.21"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-sqlx = { version = "0.5.12", features = [ "mysql" , "runtime-tokio-rustls", "json"] }
+sqlx = { version = "0.5.12", features = [ "mysql" , "runtime-tokio-native-tls", "json"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt"] }
