--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mysql-es"
-version = "0.3.2"
+version = "0.4.0"
 authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
 edition = "2021"
 license = "Apache-2.0"
@@ -11,7 +11,7 @@ documentation = "https://docs.rs/mysql-es"
 readme = "README.md"
 
 [dependencies]
-cqrs-es = "0.3.2"
+cqrs-es = "0.4.0"
 
 async-trait = "0.1.53"
 futures = "0.3.21"
@@ -22,3 +22,6 @@ sqlx = { version = "0.5.12", features = [ "mysql" , "runtime-tokio-native-tls", 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt"] }
 uuid = { version = "0.8.2", features = ["v4"]}
+
+[patch.crates-io]
+cqrs-es = { path = "../cqrs" }
